--- a/Skip.env
+++ b/Skip.env
@@ -8,13 +8,13 @@
 PRODUCT_NAME = SkipNotes
 
 // PRODUCT_BUNDLE_IDENTIFIER is the unique id for both the iOS and Android app
-PRODUCT_BUNDLE_IDENTIFIER = skip.app.notes
+PRODUCT_BUNDLE_IDENTIFIER = org.appfair.app.SkipNotes
 
 // The semantic version of the app
 MARKETING_VERSION = 0.0.1
 
 // The build number specifying the internal app version
-CURRENT_PROJECT_VERSION = 1
+CURRENT_PROJECT_VERSION = 2
 
 // The package name for the Android entry point, referenced by the AndroidManifest.xml
 ANDROID_PACKAGE_NAME = skip.notes
