--- a/Darwin/SkipNotes.xcconfig
+++ b/Darwin/SkipNotes.xcconfig
@@ -17,6 +17,7 @@ INFOPLIST_KEY_CFBundleDisplayName = Skip Notes
 //INFOPLIST_KEY_LSApplicationCategoryType = public.app-category.utilities
 
 INFOPLIST_KEY_NSLocationWhenInUseUsageDescription = "Skip Notes uses your location to optionally annotate notes with the current location"
+INFOPLIST_KEY_NSLocationAlwaysAndWhenInUseUsageDescription = "Skip Notes uses your location to optionally annotate notes with the current location"
 
 // iOS-specific Info.plist property keys
 INFOPLIST_KEY_UIApplicationSceneManifest_Generation[sdk=iphone*] = YES
