Switch app from Skip Fuse to Skip Lite

--- a/Sources/SkipNotesModel/Skip/skip.yml
+++ b/Sources/SkipNotesModel/Skip/skip.yml
@@ -9,6 +9,7 @@
 
 # this is a natively-compiled module
 skip:
-  mode: 'native'
+  mode: 'transpiled'
+  #mode: 'native'
   # only needs to be true for SkipNotesModelTests, since SkipNotesUI is native
-  bridging: true
+  #bridging: true
